added lizence headers
git-svn-id: file:///Users/braun/svn/vermont/trunk/npag@511 aef3b71b-58ee-0310-9ba9-8811b9f0742f

--- a/src/Makefile
+++ b/src/Makefile
@@ -23,4 +23,4 @@ npag_rec.o: npag_rec.c
 	$(CC) $(CFLAGS) -c npag_rec.c
 	
 clean:
-	/bin/rm $(PROG) $(PROG2)  $(OBJS) 
+	/bin/rm $(PROG) $(PROG2) $(PROG2).o $(OBJS) 
